# sxd

./: Cargo.toml  LICENSE-MIT
.github/workflows/: ci.yml
benches/: benchmark_criterion.rs  benchmark_iai.rs
benchmarks/benches/: benchmark.rs
benchmarks/src/: lib.rs
comparison/: Cargo.toml
comparison/fuzz/: Cargo.toml
comparison/fuzz/fuzz_targets/: does_not_crash.rs  fails_what_libxml2_fails.rs  matches_libxml2.rs  parses_what_libxml2_parses.rs
comparison/libxml2-sys/: Cargo.toml  build.rs
comparison/libxml2-sys/src/: lib.rs  wrapper.h
comparison/src/: lib.rs  main.rs
comparison/using-afl/: Cargo.toml
comparison/using-afl/src/: fails_what_libxml2_fails.rs  matches_libxml2.rs  parses_what_libxml2_parses.rs
comparison/using-libfuzzer/: Cargo.toml
comparison/using-libfuzzer/fuzz_targets/: does_not_crash.rs  parses_what_libxml2_parses.rs
comparison/using-proptest/: Cargo.toml
comparison/using-proptest/src/: lib.rs
document/: Cargo.toml
document/src/: lib.rs
dump/: Cargo.toml
dump/src/: main.rs
etc/: add-bench-commit-message.sh
formatter/: Cargo.toml
formatter/src/: lib.rs
mapper/: Cargo.toml
mapper/derive/: Cargo.toml
mapper/derive/src/: lib.rs
mapper/src/: lib.rs
pull-parser/: Cargo.toml
pull-parser/benches/: benchmark_criterion.rs  benchmark_iai.rs
pull-parser/comparison/: Cargo.toml
pull-parser/comparison/using-afl/: Cargo.toml
pull-parser/comparison/using-afl/src/: main.rs
pull-parser/comparison/using-proptest/: .gitignore
pull-parser/src/: lib.rs  macros.rs
src/: blocking.rs  lib.rs  macros.rs  main.rs
string-slab/: Cargo.toml  LICENSE-APACHE
string-slab/benchmarks/: Cargo.toml
string-slab/benchmarks/benches/: benchmark.rs
string-slab/benchmarks/src/: lib.rs
string-slab/src/: lib.rs
tests/: parse-and-format.rs
token/: Cargo.toml  build.rs
token/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs
validation/: Cargo.toml
validation/benches/: benchmark_iai.rs
validation/src/: lib.rs
xml-str/: Cargo.toml
xml-str/comparison/: Cargo.toml
xml-str/comparison/benches/: benchmark.rs
xml-str/comparison/src/: lib.rs
xml-str/src/: lib.rs
