[package]
name = "sxd"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"
debug = true

[profile.bench]
lto = "thin"

[workspace]
members = [
    "document",
    "pull-parser",
    "string-slab",
    "string-slab/benchmarks",
    "token",
    "util",
    "validation",
]

[dependencies]
document = { package = "sxd-document", path = "document" }
formatter = { package = "sxd-formatter", path = "formatter" }
pull-parser = { package = "sxd-pull-parser", path = "pull-parser" }
token = { package = "sxd-token", path = "token" }
validation = { package = "sxd-validation", path = "validation" }

argh = { version = "0.1.7", default-features = false }
