[package]
name = "sxd"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"
debug = true

[profile.bench]
lto = "thin"

[workspace]
members = [
    "pull-parser",
    "string-slab",
    "string-slab/benchmarks",
    "token",
    "util",
    "validation",
    "xml-str",
    "xml-str/comparison",
]

[workspace.dependencies]
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher", "inline-more"] }
snafu = "0.8.0"

[dependencies]
token = { package = "sxd-token", path = "token" }
pull-parser = { package = "sxd-pull-parser", path = "pull-parser" }
formatter = { package = "sxd-formatter", path = "formatter" }
validation = { package = "sxd-validation", path = "validation" }
