[package]
name = "sxd-string-slab"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2021"

description = "A string interning pool tailored for XML documents"
keywords = ["string", "intern", "pool"]

repository = "https://github.com/shepmaster/sxd"
documentation = "https://docs.rs/sxd-string-slab"

license = "MIT OR Apache-2.0"

[dependencies]
hashbrown.workspace = true

[dev-dependencies]
proptest = "1.0"
rand = "0.8.0"
once_cell = "1.5.2"
