[package]
name = "sxd-token"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
