[package]
name = "sxd-validation"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pull-parser = { package = "sxd-pull-parser", path = "../pull-parser" }
string-slab = { package = "sxd-string-slab", path = "../string-slab" }
token = { package = "sxd-token", path = "../token" }
util = { package = "sxd-util", path = "../util" }

hashbrown.workspace = true
regex = { version = "1.4.3", default-features = false, features = ["std"] }
snafu.workspace = true

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "benchmark_iai"
harness = false
