[package]
name = "using-afl"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
comparison = { path = ".." }

afl = "0.14.3"

[[bin]]
name = "afl_parses_what_libxml2_parses"
path = "src/parses_what_libxml2_parses.rs"
test = false
doc = false

[[bin]]
name = "afl_fails_what_libxml2_fails"
path = "src/fails_what_libxml2_fails.rs"
test = false
doc = false
