[package]
name = "sxd-mapper-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.14.1", default-features = false }
heck = { version = "0.4.0", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false, features = ["proc-macro"] }
syn = { version = "1", default-features = false }
