[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sxd-string-slab = { path = ".." }

backtrace = "0.3.56"
criterion = "0.5.1"
hashbrown = { version = "0.14.1", default-features = false, features = ["ahash", "inline-more"] }
itertools = "0.10.0"
once_cell = "1.5.2"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false
